[package]
name = "sdl2-rs"
version = "0.0.0"
edition = "2021"

[features]
default = ["bundled"]
log = []

# sdl2-sys features.
bundled = ["sdl2-sys/bundled"]
static-link = ["sdl2-sys/static-link"]
use-vcpkg = ["sdl2-sys/use-vcpkg"]
use-bindgen = ["sdl2-sys/use-bindgen"]
use-pkgconfig = ["sdl2-sys/use-pkgconfig"]
use_mac_framework = ["sdl2-sys/use_mac_framework"]
ttf = ["sdl2-sys/ttf"]
flate2 = ["sdl2-sys/flate2"]
image = ["sdl2-sys/image"]
mixer = ["sdl2-sys/mixer"]
gfx = ["sdl2-sys/gfx"]

[dependencies]
bitmask-enum = "2.1.0"
derive_more = "0.99.17"
ffi-convert = "0.6.1"
ffi-convert-derive = "0.6.1"
libc = "0.2.142"
log = "0.4.17"
sdl2-sys = "0.35.2"
semver = "1.0.17"
thiserror = "1.0.40"
